4.2/gaudi-only-sarvam/httproute.yaml
apiVersion: v1
kind: Service
metadata:
  name: decode-backend
spec:
  clusterIP: None
  selector:
    llm-d.ai/inference-serving: "true"
    llm-d.ai/guide: precise-prefix-cache-aware
    llm-d.ai/role: decode
  ports:
    - name: vllm
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-sarvam-gaudi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infra-sarvam-gaudi-inference-gateway
  rules:
    - backendRefs:
        - name: decode-backend
          port: 8000
          weight: 1
      filters:
        - type: ExtensionRef
          extensionRef:
            group: inference.networking.x-k8s.io
            kind: InferencePool
            name: gaie-sarvam-gaudi-v1alpha2
      timeouts:
        backendRequest: 0s
        request: 0s
      matches:
        - path:
            type: PathPrefix
            value: /
